--- a/tests/custom.html
+++ b/tests/custom.html
@@ -38,18 +38,31 @@
 
         <script src="assets/jquery-jvectormap-map.js"></script>
         <script>
-            $(function(){
+            /*jslint browser:true, es5:true, white:false, forin:true */
+            /*globals $ */
+            $(function () {
                 var map = $('#map1').vectorMap({
                     map: 'map',
                     markers: [
-                        {coords: [100, 100], name: 'Marker 1', style: {fill: 'yellow'}},
-                        {coords: [200, 200], name: 'Marker 2', style: {fill: 'yellow'}},
+                        {
+                            coords: [100, 100],
+                            name: 'Marker 1',
+                            style: {
+                                fill: 'yellow'
+                            },
+                        },{
+                            coords: [200, 200],
+                            name: 'Marker 2',
+                            style: {
+                                fill: 'yellow'
+                            },
+                        },
                     ],
                 });
             });
         </script>
     </head>
     <body>
-        <div id="map1" style="width: 600px; height: 600px"></div>
+        <div id="map1" style="width: 600px; height: 600px;"></div>
     </body>
 </html>
