make names consistent

--- a/tests/index.html
+++ b/tests/index.html
@@ -54,7 +54,7 @@
                     $('#map1').vectorMap('set', 'focus', 1, 0, 0);
                 });
                 $('#map1').vectorMap({
-                    map: 'world_mill_en',
+                    map: 'world-mill-en',
                     focusOn: {
                         x: 0.5,
                         y: 0.5,
