--- a/tests/markers.html
+++ b/tests/markers.html
@@ -72,7 +72,7 @@
 
                 var map = new jvm.WorldMap({
                     container: $('.map'),
-                    map: 'us_aea_en',
+                    map: 'us-aea-en',
                     markers: markers,
                     series: {
                         markers: [{
