--- a/tests/reverse-projection.html
+++ b/tests/reverse-projection.html
@@ -45,7 +45,7 @@
                     markersCoords = {};
 
                 map = new jvm.WorldMap({
-                    map: 'us_lcc_en',
+                    map: 'us-lcc-en',
                     markerStyle: {
                         initial: {
                             fill: 'red',
