--- a/tests/nc-sc.html
+++ b/tests/nc-sc.html
@@ -15,7 +15,7 @@
                 margin-bottom: 0;
             }
         </style>
-        <script src="assets/jquery-1.8.2.js"></script>
+        <script src="/lib/jquery/jquery-1.8.2.js"></script>
         <script src="../jq-vmap.js"></script>
         <script src="assets/nc-sc.js"></script>
         <script>
