--- a/tests/build.html
+++ b/tests/build.html
@@ -15,7 +15,7 @@
                 margin-bottom: 0;
             }
         </style>
-        <script src="assets/jquery-1.8.2.js"></script>
+        <script src="/lib/jquery/jquery-1.8.2.js"></script>
         <script src="../jq-vmap.js"></script>
         <script src="assets/jquery-jvectormap-map.js"></script>
         <script src="assets/jquery-jvectormap-us-aea-en.js"></script>
