--- a/tests/reverse-projection.html
+++ b/tests/reverse-projection.html
@@ -3,7 +3,7 @@
     <head>
         <title>jVectorMap demo</title>
         <link rel="stylesheet" media="all" href="../jquery-jvectormap.css"/>
-        <script src="assets/jquery-1.8.2.js"></script>
+        <script src="/lib/jquery/jquery-1.8.2.js"></script>
         <script src="../jquery-jvectormap.js"></script>
         <script src="../jquery-mousewheel.js"></script>
 
