--- a/tests/hidden.html
+++ b/tests/hidden.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>jVectorMap demo</title>
+  <meta charset="utf-8"/>
+  <title>Maps</title>
   <link rel="stylesheet" media="all" href="../jquery-jvectormap.css"/>
+
   <script src="https://code.jquery.com/jquery-1.8.2.js"></script>
   <script src="../jquery-jvectormap.js"></script>
   <script src="../lib/jquery-mousewheel.js"></script>
@@ -19,8 +21,6 @@
   <script src="../src/svg-shape-element.js"></script>
   <script src="../src/svg-path-element.js"></script>
   <script src="../src/svg-circle-element.js"></script>
-  <script src="../src/svg-image-element.js"></script>
-  <script src="../src/svg-text-element.js"></script>
 
   <script src="../src/vml-element.js"></script>
   <script src="../src/vml-group-element.js"></script>
@@ -28,7 +28,6 @@
   <script src="../src/vml-shape-element.js"></script>
   <script src="../src/vml-path-element.js"></script>
   <script src="../src/vml-circle-element.js"></script>
-  <script src="../src/vml-image-element.js"></script>
 
   <script src="../src/map-object.js"></script>
   <script src="../src/region.js"></script>
@@ -39,52 +38,27 @@
   <script src="../src/ordinal-scale.js"></script>
   <script src="../src/numeric-scale.js"></script>
   <script src="../src/color-scale.js"></script>
-  <script src="../src/legend.js"></script>
   <script src="../src/data-series.js"></script>
   <script src="../src/proj.js"></script>
   <script src="../src/map.js"></script>
 
-  <script src="assets/jquery-jvectormap-us-lcc-en.js"></script>
+  <script src="assets/jquery-jvectormap-us-aea-en.js"></script>
   <script>
     $(function(){
-      var map,
-          markerIndex = 0,
-          markersCoords = {};
-
-      map = new jvm.Map({
-          map: 'us_lcc_en',
-          markerStyle: {
-            initial: {
-              fill: 'red'
-            }
-          },
-          container: $('#map'),
-          onMarkerTipShow: function(e, tip, code){
-            map.tip.text(markersCoords[code].lat.toFixed(2)+' '+markersCoords[code].lng.toFixed(2));
-          },
-          onMarkerClick: function(e, code){
-            map.removeMarkers([code]);
-            map.tip.hide();
-          }
+      var map = new jvm.Map({
+        container: $('.map'),
+        map: 'us_aea_en'
       });
 
-      $('#map').click(function(e){
-          var x = e.pageX - map.container.offset().left,
-              y = e.pageY - map.container.offset().top,
-              latLng = map.pointToLatLng(x, y),
-              targetCls = $(e.target).attr('class');
-
-          if (latLng && (!targetCls || targetCls.indexOf('jvectormap-marker') === -1)) {
-            markersCoords[markerIndex] = latLng;
-            map.addMarker(markerIndex, {latLng: [latLng.lat, latLng.lng]});
-            markerIndex += 1;
-          }
+      $('.show-button').click(function(){
+        $('.map').show();
+        map.updateSize();
       });
-      $('#map').bind('');
     });
   </script>
 </head>
 <body>
-  <div id="map" style="width: 900px; height: 600px"></div>
+  <div class="map" style="display: none; width: 800px; height: 500px"></div>
+  <input type="button" value="Show" class="show-button"/>
 </body>
 </html>
