--- a/tests/hidden.html
+++ b/tests/hidden.html
@@ -5,7 +5,7 @@
   <title>Maps</title>
   <link rel="stylesheet" media="all" href="../jquery-jvectormap.css"/>
 
-  <script src="assets/jquery-1.8.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.8.2.js"></script>
   <script src="../jquery-jvectormap.js"></script>
   <script src="../lib/jquery-mousewheel.js"></script>
 
