--- a/tests/markers.html
+++ b/tests/markers.html
@@ -24,7 +24,7 @@
     }
   </style>
 
-  <script src="assets/jquery-1.8.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.8.2.js"></script>
   <script src="../jquery-jvectormap.js"></script>
   <script src="../lib/jquery-mousewheel.js"></script>
 
